# SMHI_api_rust

./: .rustc_info.json  Cargo.toml  README.md  ulf.db
src/: debug_fetch.rs  lib.rs  main.rs  stationer_parametrar.txt  test.rs
src/api/: mod.rs  smhi.rs
src/db/: connection.rs  mod.rs  operation.rs  schema.rs
src/importer/: import.rs
src/json/: mod.rs  parser.rs  tempvalue_parser.rs  timestamp_converter.rs
tests/: build_url_test.rs  temp_value_test.rs  testfil.rs  timestamp_converter_test.rs  ulf.db  väderobservationer.db
