[package]
name = "omstart_smhi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["clock"] }
chrono-tz = "0.8"
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
